Declaración de clase OrderBase como abstract
Se crea la clase base OrderBase como abstract y se añade la clase
OrderByCash

--- a/exercici2.csproj
+++ b/exercici2.csproj
@@ -60,6 +60,7 @@
     <Compile Include="original\model\Order.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="original\model\OrderByCash.cs" />
     <Compile Include="original\model\OrderByCreditCard.cs" />
     <Compile Include="original\model\OrderException.cs">
       <SubType>Code</SubType>
