--- a/exercici2.csproj
+++ b/exercici2.csproj
@@ -40,8 +40,9 @@
       <HintPath>library\Castle.DynamicProxy2.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Moq">
-      <HintPath>library\Moq.dll</HintPath>
+    <Reference Include="Moq, Version=4.2.1502.911, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -79,6 +80,7 @@
     <Compile Include="original\services\AvsMismatchException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="original\services\IinventorySystemWrapper.cs" />
     <Compile Include="original\services\InsufficientInventoryException.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -86,6 +88,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="original\services\InventorySystemWrapper.cs" />
+    <Compile Include="original\services\IPaymentGatewayWrapper.cs" />
     <Compile Include="original\services\Logger.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -99,6 +102,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
